# oteljavalab

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose-section06.yml  docker-compose-section08.yml  docker-compose-section10.yml  docker-compose-section12.yaml  docker-compose-section13.yaml  docker-compose.yml
section00/: README.md
section00/activity/: collector-template.yaml  collector-with-log.yaml  collector.yaml
section01/: README.md
section02/: README.md
section02/activity/: build.gradle.kts
section02/solution/: build.gradle.kts
section03/: README.md
section03/activity/: build.gradle.kts
section03/solution/: build.gradle.kts
section04/: README.md
section04/activity/: build.gradle.kts
section04/solution/: build.gradle.kts
section05/: README.md
section05/activity/: build.gradle.kts
section05/solution/: build.gradle.kts
section06/: README.md
section06/activity/: startServices.sh  stopServices.sh
section06/activity/temperature-calculator/: build.gradle.kts  settings.gradle.kts
section06/activity/temperature-simulator/: build.gradle.kts  settings.gradle.kts
section06/solution/: settings.gradle.kts
section06/solution/temperature-calculator/: build.gradle.kts
section06/solution/temperature-simulator/: build.gradle.kts
section07/: README.md
section07/solution/: build.gradle.kts  settings.gradle.kts
section08/: README.md
section09/: README.md
section09/solution/: build.gradle.kts
section10/: README.md
section10/activity/: build.gradle.kts
section10/solution/: build.gradle.kts
section11/: README.md
section11/activity/: build.gradle.kts
section12/activity/: README.md
section12/activity/data-processing/: Cargo.toml  Dockerfile
section12/activity/data-processing/src/: data_processing.rs  main.rs  telemetry_conf.rs
section13/: README.md
section13/activity/otelcollector/: otelcol-config.yaml
section13/activity/temperature-calculator/: Dockerfile  build.gradle.kts  settings.gradle.kts
section13/activity/temperature-simulator/: Dockerfile  (+2 more)
section13/solution/data-processing/: Cargo.toml
section13/solution/data-processing/src/: data_processing.rs  main.rs  telemetry_conf.rs
(+58 files in other folders)
