[package]
name = "dataprocessing"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "dataprocessing"
path = "src/main.rs"

[dependencies]
actix-web = "4"
awc = { version = "3.0", default-features = false, features = ["compress-zstd"] }
log = "0.4"
simplelog = "0.12.2"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }

# OpenTelemetry dependencies
actix-web-opentelemetry = { version = "0.17.0", features = ["sync-middleware", "awc"] }
opentelemetry = { version = "0.22", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "metrics"]}
#opentelemetry-semantic-conventions = "0.14.0"
opentelemetry-otlp = { version = "0.15.0", features = ["metrics", "tokio", "trace"] }
